# vibe-trade-ingestion

./: .env  .env.update  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  batch_job.py  init_db.py  pyproject.toml  scheduler.py
.github/workflows/: ci.yml
src/: __init__.py  config.py  main.py
src/db/: clickhouse_client.py
src/ingestion/: __init__.py  realtime_ingestor.py  spot_ingestor.py  storage_service.py  twitter_ingestor.py
src/models/: __init__.py  bar_data.py  candle.py  results.py  tweet.py
src/publishers/: __init__.py  pubsub_publisher.py
src/sources/: base.py  coinbase.py  twitter.py
tests/: __init__.py  conftest.py  test_ingestion_e2e.py
